--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,20 @@
     <string name="app_name">akBaLog</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="commonCancel">Cancel</string>
+    <string name="commonYes">Yes</string>
+    <string name="commonNo">No</string>
     <string name="fetchNews">getNews</string>
     <string name="designTimeGroup">dtGroup</string>
-
+    <string name="dialogTitle">Mark ToDo Done</string>
+    <string name="dialogMessage">"Are you really done '%1$s' thing"</string>
+    <string name="toDoMarkedDone">Good Job!</string>
+    <string name="settingAbout">About</string>
+    <string name="messageAbout">Manage your daily ToDos or follow sport news!</string>
+    <string name="mainHelper">Welcome to akBaLog! Here are your ToDos from the Category:</string>
+    <string name="menuNews">Sport news</string>
+    <string name="title_activity_news">NewsActivity</string>
+    <string name="menuAddToDo">Add new ToDo</string>
+    <string name="toDoAdded">Added new ToDo!</string>
+    <string name="dialogAddToDoTitle">Add new ToDo!</string>
 </resources>
